Fixed a layout problem (width / resizing of template and quote header fields)

--- a/chrome/content/skin/common/style.css
+++ b/chrome/content/skin/common/style.css
@@ -912,6 +912,7 @@ tab#SmartTemplate4-Pro.expired {
 
 label.plain-link:hover {
 	text-decoration: underline;
+  cursor: pointer;
 }
 
 
